--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   jenkins-docker:
     container_name: jenkins-docker
     image: docker:dind
+    ports:
+      - "3000:3000"
     privileged: true
     volumes:
        - jenkins-docker-certs:/certs/client
@@ -22,7 +24,6 @@ services:
     image: jenkinsci/blueocean
     ports:
       - "80:8080"
-      - "3000:3000"
     volumes:
        - jenkins-docker-certs:/certs/client:ro
        - jenkins-data:/var/jenkins_home
