--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,9 @@ services:
              - docker
 
   jenkins-blueocean:
+    build:
+      context: ./jenkins_build
     container_name: jenkins-blueocean
-    image: myjenkins-blueocean:2.346.3-1
     ports:
       - "80:8080"
       - "50000:50000"
