Adicionando o grafana a stack de exemplo

--- a/docker-compose-deployment.yml
+++ b/docker-compose-deployment.yml
@@ -54,9 +54,30 @@ services:
     networks:
        myapp-net:
 
+# https://grafana.com/grafana/dashboards/16306-express-prometheus-middleware/
+# https://grafana.com/grafana/dashboards/11956-nodejs-metrics/
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana:8.4.5
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+    environment:
+      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    restart: unless-stopped
+    networks:
+       myapp-net:
+
 networks:
   myapp-net:
      name: myapp-net
      
 volumes:
     prometheus_data: {}
+    grafana_data: {}
